2006-09-06  Albert Chu <chu11@llnl.gov>

	* bmc-config/src/bmc-user-sections (enable_user_diff): Implement
	appropriately for errata 3 changes.

	* bmc-config/src/bmc-pef-conf-section.c (pef_control_commit): Fix
	bug.
	
2006-09-05  Albert Chu <chu11@llnl.gov>

	* bmc-config/src/bmc-user-sections.c (enable_user_checkout):
	Slightly alter logic.

2006-09-05  Albert Chu <chu11@llnl.gov>
	
	Apply BMC config fixes from Ingo van Lil (inguin at gmx dot de)

	* bmc-config/src/bmc-misc-section.c (bmc_misc_section_get): Set
	flag to BMC_CHECKOUT_KEY_COMMENTED_OUT_IF_VALUE_EMPTY.

	* bmc-config/src/bmc-sol-conf-section.c
	(character_accumulate_interval_commit,
	character_send_threshold_commit, sol_retry_count_commit,
	sol_retry_interval_commit): Fix commit bug.

	* libfreeipmi/src/ipmi-pef-and-alerting-cmds.c: Fix misnamed
	fields in
	tmpl_cmd_set_pef_configuration_parameters_pef_startup_delay_rq.

2006-09-04  Albert Chu <chu11@llnl.gov>

	Various compile warning fixes.

2006-09-04  Albert Chu <chu11@llnl.gov>

	Apply PEF configuration fixes from Ingo van Lil (inguin at gmx dot de)

	* libfreeipmi/src/udm/ipmi-pef-and-alerting-cmds-udm.c: Fix
	incorrect NetFNs.
	
	* libfreeipmi/src/ipmi-pef-and-alerting-cmds.c: Fix parameter
	revision inconsistency with other templates.
	
2006-08-31  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/ipmipower_powercmd.c (_check_open_session_error):
	Fix corner cases.

	* libfreeipmi/include/freeipmi/ipmi-comp-code-spec.h,
	libfreeipmi/src/ipmi-error.c (ipmi_strerror_r): Update w/ new
	completion codes based on IPMI 2.0 Errata 3.

	* libfreeipmi/src/ipmi-sensor-and-event-code-tables.c
	(ipmi_sensor_type_code_13_desc): Updated with new strings.

	* libfreeipmi/include/ipmi-messaging-support-cmds.h,
	libfreeipmi/src/ipmi-messaging-support-cmds.c: Support user id
	enabled/disabled detection in get user access command.

	* bmc-config/src/: Support enable user id checkout due to errata
	change to get user access command.
