@@ -1,3 +1,8 @@
+2006-09-08  Albert Chu <chu11@llnl.gov>
+
+	* bmc-config/src/bmc-config-api.c: Fix rmcpplus cipher suite
+	privilege interpretation issue.
+	
 2006-09-06  Albert Chu <chu11@llnl.gov>
 
 	* bmc-config/src/bmc-user-sections (enable_user_diff): Implement
